cmake_minimum_required(VERSION 3.12)
project(Hotel)

set(CMAKE_CXX_STANDARD 17)

add_executable(Hotel main.cpp LDE.cpp LDE.hpp Recepcao.cpp Recepcao.hpp Pilha.cpp Pilha.hpp Senha.cpp Senha.hpp No.cpp No.hpp InterfaceGrafica/Hotel/Quarto.hpp LES.cpp LES.hpp LDDE.cpp LDDE.hpp Cola.cpp Cola.hpp Caracteristicas.cpp Caracteristicas.hpp)